--- a/style.css
+++ b/style.css
@@ -178,6 +178,27 @@ header, section, footer {
     background: white;
     color: rgb(103, 56, 56);
 }
+.book_btn {
+  background-color: #785B44;
+  color: white;
+  width: 200px;              /* medium size */
+  padding: 12px 25px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1em;
+  font-weight: bold;
+  letter-spacing: 1px;
+  transition: background-color 0.3s;
+  
+  display: block;            /* makes centering easier */
+  margin: 30px auto;         /* centers button horizontally */
+  text-align: center;        /* centers text inside */
+}
+
+.book_btn:hover {
+  background-color: #604732; /* subtle hover effect */
+}
+
 
 .hero {
     height: 86.5vh;
@@ -381,3 +402,4 @@ header, section, footer {
     font-weight: bold;
     color:#392619;
 }
+
