--- a/style.css
+++ b/style.css
@@ -62,11 +62,29 @@ nav a:hover {
     transform: scale(1.05);
 
 }
-h1 {
-    font-size: 30px;
-    color:  #FFF;
 
+
+h1 {
+    color: #FFF;
+    font-size: 48px;
+    font-family: 'Times New Roman', Times, serif;
 }
+.footer-contents{
+    text-align: center;
+}
+
+.divider-footer{
+    background-color: #604732;
+    height: 50px;
+}
+
+#seasonal-menu{ 
+    font-size: 50px;
+    color: #573319;
+    font-weight: bold;
+    text-shadow: 0 2px #a8a4a4;
+}
+
 .rev_form {
     margin: 10px auto; /* centers horizontally */
     width: 50%;        /* adjust as needed */
@@ -152,7 +170,7 @@ h1 {
 }
 .location-grids {
   display: flex;
-  justify-content: center; 
+  justify-content: space-evenly; 
   align-items: center;     
   gap: 30px;               
   width: 100%;             
@@ -160,6 +178,10 @@ h1 {
 .location-grids h3 {
     color:#7B5B44;
 }
+.branch{
+    text-align: center;
+}
+
 .footer-message {
     width: 100%;
     height: 400px;
@@ -201,10 +223,10 @@ h1 {
 }
 @media (max-width: 950px) {
     .location-grids { flex-wrap: wrap; text-align: center;}
-    .branhes {width: 45%;}
+    .branch {width: 45%;}
 }
 @media (max-width: 600px) {
-    .branhes { width: 90%;margin-bottom: 20px;}
+    .branch { width: 90%;margin-bottom: 20px;}
 }
 
 body, html {
@@ -295,6 +317,10 @@ header, section, footer {
     font-size: 1.3rem;
 }
 
+.about-section h1 {
+    color: #131313;
+    text-align: center;
+}
 .learn-more {
     padding: 0.8rem 3rem;
     border-radius: 2px;
@@ -316,6 +342,8 @@ header, section, footer {
     padding: 0;
     color: #7B5B44;
     text-align: center;
+    max-width: 100%;
+    margin: 0 auto;
 }
 
 .chef-img {
@@ -462,10 +490,6 @@ header, section, footer {
     color:#392619;
 }
 
-.menu {
-    max-width: 100%;
-    margin: 0 auto;
-}
 /* Hero Image Section */
 .malis-section {
     position: relative;
@@ -635,13 +659,13 @@ header, section, footer {
 .menu-cta {
     text-align: center;
     padding: 60px 20px;
-    background: #fafaf8;
+    background: #604732;
     margin-top: 40px;
 }
 .menu-cta p {
     font-size: 1.6rem;
     letter-spacing: 2px;
-    color: #2a2015;
+    color: #ffffff;
     margin-bottom: 30px;
     font-weight: 300;
 }
@@ -650,7 +674,7 @@ header, section, footer {
     padding: 18px 50px;
     background: transparent;
     border: 2px solid #7B5B44;
-    color: #7B5B44;
+    color: #FFF;
     text-decoration: none;
     font-size: 1rem;
     letter-spacing: 3px;
@@ -667,7 +691,7 @@ header, section, footer {
     left: -100%;
     width: 100%;
     height: 100%;
-    background: #7B5B44;
+    background: #FFF;
     transition: left 0.4s ease;
     z-index: -1;
 }
@@ -675,7 +699,8 @@ header, section, footer {
     left: 0;
 }
 .btn1.bookbtn:hover {
-    color: white;
+    color: #7B5B44;
+    font-weight: bold;
     box-shadow: 0 10px 30px rgba(123, 91, 68, 0.3);
 }
 @media (max-width: 1200px) {
