--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body, html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow-x: hidden;
+    overflow-x: visible;
 }
 
 header, section, footer {
