--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ header, section, footer {
     position: relative;
     width: 100%;
     min-height: 500px;
-    background: linear-gradient(rgba(0,0,0,0.7)), url('chef2.jpg');
+    background: linear-gradient(rgba(0,0,0,0.7)), url('chefmongkol.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
